--- a/sfmt-abstract.tex
+++ b/sfmt-abstract.tex
@@ -69,8 +69,7 @@ In this case,
 there arises some difficulty in using lattice method
 to compute the higher dimensional distribution property:
 we solve this by 
-using a redundant (two or four times larger, respectively) 
-state-space representation.
+using a partially weighted norm.
 
 Another speed-up is realized by 
 ``fill\_array function,'' that fills 
