--- a/sfmt-abstract.tex
+++ b/sfmt-abstract.tex
@@ -68,8 +68,7 @@ into two 64-bit integers or four 32-bit integers.
 In this case,
 there arises some difficulty in using lattice method
 to compute the higher dimensional distribution property:
-we solve this by 
-using a partially weighted norm.
+we solve this by using a weighted norm.
 
 Another speed-up is realized by 
 ``fill\_array function,'' that fills 
